--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,18 +1,17 @@
 # Authors
 
 Name Name:
-  name        : "Name Name"
-  uri         : "http://name.com"
-  email       : "name@name.com"
-  bio         : "This is the first name."
-  avatar      : "bio-photo-2.jpg"
-  twitter     : "name"
-  google_plus : "Name"
+  name        : "Elias Ramzi"
+  uri         : "https://elias-ramzi.github.io/"
+  email       : "elias.ramzi@lecnam.net"
+  bio         : "PhD student in deep learning."
+  avatar      : "profile.png"
+  googlescholar     : "https://scholar.google.com/citations?user=mbfTD_UAAAAJ&hl=fr"
 
-Name2 Name2:
-  name        : "Name2 Name2"
-  email       : "name2@name2.com"
-  bio         : "I ordered what?"
-  avatar      : "bio-photo.jpg"
-  twitter     : "name2"
-  google_plus : "Name"
+# Name2 Name2:
+#   name        : "Name2 Name2"
+#   email       : "name2@name2.com"
+#   bio         : "I ordered what?"
+#   avatar      : "bio-photo.jpg"
+#   twitter     : "name2"
+#   google_plus : "Name"
