--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/elias-ramzi-220394132/"
+  linkedin         : "elias-ramzi-220394132/"
   orcid            : "https://orcid.org/0000-0002-0131-2458"
   pinterest        :
   soundcloud       :
