--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -3,8 +3,8 @@
 Name Name:
   name        : "Elias Ramzi"
   uri         : "https://elias-ramzi.github.io/"
-  email       : "elias.ramzi@lecnam.net"
-  bio         : "PhD student in deep learning."
+  email       : "elias.ramzi@valeo.com"
+  bio         : "AI Research Scientist."
   avatar      : "profile.png"
   googlescholar     : "https://scholar.google.com/citations?user=mbfTD_UAAAAJ&hl=fr"
 
