--- a/_config.yml
+++ b/_config.yml
@@ -83,8 +83,8 @@ author:
   name             : "Elias Ramzi"
   avatar           : "profile.png"
   bio              : "AI Research Scientist."
-  location         :
-  employer         : "Valeo.AI, Paris France"
+  location         : "Paris, France"
+  employer         : "valeo.ai"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=mbfTD_UAAAAJ&hl=fr"
   email            : "elias.ramzi@valeo.com"
